[package]
name = "ws_server"
version = "0.1.0"
authors = ["wakewakame <0214.taiki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.18"
futures-util = "0.3.18"
tokio = { version = "1.14.0", features = ["full"] }
tokio-tungstenite = "0.16.0"
rapier2d = { version = "*", features = [ "simd-stable" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
